<resources>
    <string name="app_name">FoodTracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Пропусmиmь</string>
    <string name="todo">TODO</string>
    // title OnBoard
    <string name="first_title_on_board">Добро пожаловать в FoodTracker</string>
    <string name="second_title_on_board">В приложение</string>
    <string name="third_title_on_board">C возможностью</string>
    // description OnBoard
    <string name="first_description_on_board">вы регулируете количество поглощенных калорий</string>
    <string name="second_description_on_board">просмотра съеденных вами продуктов.</string>
    <string name="registration">Регистрация</string>
    <string name="login">Вход</string>
    <string name="name">Имя</string>
    <string name="new_entry">Новая запись</string>
    <string name="product_name">Название продукта</string>
    <string name="ccal">Калорийность</string>
    <string name="save">Cохранить</string>
    <string name="norms_day">Норма дня</string>
    <string name="edit_norms_ccal">Норма калорий в день</string>
    <string name="history">История</string>
    <string name="date">12.12.2022г</string>
    <string name="main">Главная</string>
</resources>