<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_login"
    tools:context=".ui.fragments.login.LogInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:paddingVertical="15dp"
            android:text="@string/registration"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:autofillHints=""
            android:background="@drawable/et_oval"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="10dp"
            android:paddingVertical="15dp"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="20sp"
            tools:ignore="LabelFor" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_skip"
            style="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/green"
            android:paddingVertical="10dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="italic"
            app:cornerRadius="10dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>